--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,15 @@
 	
 }
 
+
+#home .overlay {
+	height: 100vh;
+	display: flex;
+	align-items: center;
+}
+
+
+
 .scaled-icon {
 	transform: scale(2);
 }
@@ -149,7 +158,7 @@ a:focus {
     text-decoration: none;
     color: #ffcc33;
 }
-.highlight { color: #38A5DB;}
+.highlight { color: black;}
 .clearfix:after {
     visibility: hidden;
     display: block;
@@ -164,7 +173,7 @@ a:focus {
 /* Navigation */
 #menu {
     margin-bottom: 0;
-    background-color: #38A5DB;
+    background-color: black;
     padding: 10px 0;
     height: auto;
     border: 0px;
@@ -246,7 +255,7 @@ a.goto-btn {
 }
 a.goto-btn:hover {
     color: #FEFFFF;
-    border-bottom: 2px solid #38A5DB;
+    border-bottom: 2px solid black;
 }
 /* Home Section Style 2 - With Video*/
 #home.video .overlay {
@@ -313,7 +322,7 @@ a.goto-btn:hover {
     width: 14px;
     height: 14px;
     margin: 0;
-    background-color: #38A5DB;
+    background-color: black;
 }
 .carousel-fade .carousel-inner .item {
     opacity: 0;
@@ -387,7 +396,7 @@ a.goto-btn { margin-right: 30px ; border: #fff 1px solid; padding: 12px 18px; co
 }
 /* Intro Section */
 #intro {
-    background-color: #38A5DB;
+    background-color: black;
     padding: 5% 0;
     color: #ffffff;
     text-align: center;
@@ -482,7 +491,7 @@ h4.media-heading {
 }
 /* About Us */
 #about {
-    background: #38A5DB;
+    background: black;
     color:#fff;
     padding:80px 0;
 }
@@ -715,7 +724,7 @@ ul.social li a.fa:hover { background-color: #333333 }
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
     color: #fff;
-    background-color: #38A5DB;
+    background-color: black;
     padding: 25px;
 }
 .nav-pills > li > a { border-radius: 0;}
@@ -732,14 +741,14 @@ ul.features li span.fa {
 ul.cat { margin: 30px 0 }
 ul.cat li a {
     background: inherit;
-    border: 1px solid #38A5DB;
+    border: 1px solid black;
     padding: 10px 16px;
 }
 ul.cat li a:hover,
 ul.cat li a:focus,
 ul.cat li a.active {
-    background: #38A5DB;
-    border: 1px solid #38A5DB;
+    background: black;
+    border: 1px solid black;
     padding: 10px 16px;
     border-radius: 0;
     color: #fff;
@@ -765,7 +774,7 @@ ul.cat li a.active {
 }
 .box .hover-text i.fa {
     font-size: 20px;
-    background: #38A5DB;
+    background: black;
     padding: 13px;
     position: relative;
     top: 40%;
@@ -1003,7 +1012,7 @@ ul.cat li a.active {
     word-spacing: 2px;
     font-weight: 700;
     padding: 10px 20px 8px;
-    background-color: #38A5DB;
+    background-color: black;
     text-transform: uppercase;
     border-color: #333333;
     transition: all 0.5s;
@@ -1017,13 +1026,13 @@ ul.cat li a.active {
     border-color: #ffcc33;
 }
 .color {
-    background-color: #38A5DB;
-    border-color: #38A5DB;
+    background-color: black;
+    border-color: black;
 }
 .color:focus,
 .color:hover {
     border-color: #333333;
-    background-color: #38A5DB;
+    background-color: black;
 }
 /* Blog Section */
 #blog,
@@ -1053,7 +1062,7 @@ ul.metas li:after {
     margin-left: 3px;
 }
 ul.metas li:last-child:after { content: ' ' }
-ul.metas li a { color: #38A5DB }
+ul.metas li a { color: black }
 .meta-detail {
     background: #f4f4f4;
     border-radius: 3px;
