--- a/style.css
+++ b/style.css
@@ -350,11 +350,17 @@ section {
 
 @media (hover: hover) and (pointer: fine) { 
 	.game .img-shine:hover {
-		transform: scale(1.1) translateY(-15px) rotateX(3deg);
+		transform: scale(1.09) translateY(-15px) rotateX(3deg);
 		box-shadow: 0 20px 28px rgba(0, 0, 0, 0.45), 0 11px 10px rgba(0, 0, 0, 0.42);
 		filter: contrast(1.2);
 		z-index: 3;
 		border: var(--shine-border) solid #FFF;
+	}
+	
+	@media screen and (max-width: 600px) {
+		.game .img-shine:hover {
+			transform: scale(1.01) translateY(-15px) rotateX(3deg);
+		}
 	}
 
 	.game .img-shine.wip:hover {
@@ -382,17 +388,18 @@ section {
 }
 
 .game strong {
-	margin-top: 30px;
-	font-size: 28px;
+	margin-top: 15px;
+	font-size: 20px;
 	font-weight: 700;
 	text-transform: uppercase;
 }
 
 .game p {
-	margin-top: 22px;
+	margin-top: 6px;
 	opacity: 0.7;
 	font-weight: 200;
-	font-size: 20px;
+	font-size: 16px;
+	line-height: 1.4em;
 }
 
 
@@ -400,12 +407,33 @@ section {
 	.games {
 		flex-direction: row;
 	}
+	
+	.game strong {
+		font-size: 22px;
+		margin-top: 25px;
+	}
+	
+	.game p {
+		margin-top: 10px;
+		font-size: 18px;
+		line-height: 1.5em;
+	}
 }
 
 @media screen and (min-width: 900px) {
 	.games {
 		column-gap: 90px;
 		--shine-border: 2px;
+	}
+	
+	.game strong {
+		font-size: 28px;
+		margin-top: 25px;
+	}
+	
+	.game p {
+		margin-top: 16px;
+		font-size: 20px;
 	}
 }
 
@@ -555,7 +583,6 @@ section {
 	backdrop-filter: blur(15px);
 	transition: all 0.15s ease-out;
 	opacity: 0;
-
 }
 
 @media (hover: hover) and (pointer: fine) { 
@@ -576,18 +603,7 @@ section {
 	position: relative;
 }
 
-@media screen and (max-width: 450px) {
-	
-	.stores {
-		--gap: 15px;
-	}
-	
-	.stores > div {
-		flex-direction: column;
-	}
-}
-
-@media screen and (min-width: 450px) and (max-width: 700px) {
+@media screen and (max-width: 700px) {
 	.stores {
 		--gap: 20px;
 	}
@@ -595,7 +611,39 @@ section {
 	.stores img {
 		height: 35px;
 	}
+	
+	.stores a::before {
+		top: -6px;
+		left: -6px;
+		right: -6px;
+		bottom: -6px;
+	}
+
 }
+
+@media screen and (max-width: 450px) {
+	
+	.stores {
+		--gap: 10px;
+	}
+	
+	.stores img {
+		height: 30px;
+	}
+}
+
+@media screen and (max-width: 350px) {
+	
+	.stores {
+		--gap: 8px;
+	}
+	
+	.stores img {
+		height: 25px;
+	}
+}
+
+
 
 .press {
 	margin-top: -5px;
@@ -607,7 +655,7 @@ section {
 	grid-gap: 10px;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 1fr;
-		text-align: center;
+	text-align: center;
 }
 
 @media screen and (min-width: 800px) {
@@ -679,21 +727,36 @@ section {
 	}
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 700px) {	
+
 	.press {
-		
-		grid-template-columns: 1fr;
-		grid-template-rows: auto;
+		grid-gap: 5px;
 	}
-	
+
 	.press-card {
-		padding: 10px;
+		padding: 7px;
 	}
 	
 	.press p {
 		margin: 0 0 5px 0;
+		font-size: 22px;
+	}
+	.press strong {
+		font-size: 20px;
 	}
 }
+
+@media screen and (max-width: 450px) {
+	.press p {
+		margin: 0 0 5px 0;
+		font-size: 16px;
+		line-height: 1.3em;
+	}
+	.press strong {
+		font-size: 16px;
+	}
+}
+
 
 .game-logo {
 	max-width: calc(100% - var(--page-padding) * 2);
